# elog-zulip

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
elog_zulip/: __init__.py  elog.py  mock.py  utils.py
